[gd_scene load_steps=3 format=3 uid="uid://bvb6hiwnfaq0r"]

[ext_resource type="Script" uid="uid://bqdygnj0wbtut" path="res://UI/PauseMenu/pause_menu.gd" id="1_t3iro"]

[sub_resource type="LabelSettings" id="LabelSettings_l24xb"]
font_size = 64

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_t3iro")

[node name="ButtonPause" type="Button" parent="."]
offset_left = 1119.0
offset_top = 23.0
offset_right = 1237.0
offset_bottom = 108.0
icon_alignment = 1

[node name="Label" type="Label" parent="ButtonPause"]
layout_mode = 0
offset_left = -1.0
offset_top = -9.0
offset_right = 118.0
offset_bottom = 80.0
text = "â‰¡"
label_settings = SubResource("LabelSettings_l24xb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelMenu" type="Panel" parent="."]
offset_left = 141.0
offset_top = 273.0
offset_right = 1116.0
offset_bottom = 449.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -485.5
offset_top = -81.0
offset_right = 488.5
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9
alignment = 1

[node name="ButtonResume" type="Button" parent="PanelMenu/VBoxContainer"]
layout_mode = 2
text = "Renaudar"

[node name="ButtonMenu" type="Button" parent="PanelMenu/VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="ButtonQuit" type="Button" parent="PanelMenu/VBoxContainer"]
layout_mode = 2
text = "Salir"
